events page font and alignment corrected

--- a/static/history/css/main.css
+++ b/static/history/css/main.css
@@ -259,7 +259,7 @@ video {
     padding: 0;
     border: 0;
     font-size: 100%;
-    font: inherit;
+    /*font: inherit;*/
     vertical-align: baseline
 }
 article,
@@ -14861,7 +14861,8 @@ body.is-deprecated section#container .browser-not-supported {
 .events__container__popin .scrollable-wrapper .content-wrapper .col-container .locations .address-container .address .details {
     margin-top: 20px;
     width: 100%;
-    color: #979BA3
+    /*color: #979BA3*/
+    color: white;
 }
 .events__container__popin .scrollable-wrapper .content-wrapper .col-container .locations .address-container .address .address-link {
     margin: 25px 0 0 0
